# FormalAlgorithm

./: .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LINK_AUDIT_FINAL_REPORT.md  PROJECT_STRUCTURE.md  README.md  README_EN.md  add_02_refs.py  add_citations_main.py  add_citations_supp.py  audit_leetcode_docs.py  batch_advanced_topics.py  batch_append_spec.py  batch_generate_supplements.py  batch_knowledge_graph_bind.py  convert_refs_08.py  cspell.json  doctest_output.txt  doctest_output2.txt  doctest_output3.txt  doctest_output_clean.txt  execute_concept_replace_v2.py  execute_concept_replace_v3.py  fix_01_refs.py  fix_03_ref.py  fix_05.py  fix_bhk.py  fix_citations2.py  fix_citations3.py  fix_constructive2.py  fix_induction_refs.py  fix_leetcode_docs.py  fix_patch.py  fix_supp_01.py  fix_supp_02.py  fix_supp_03.py  link_audit_report_v2.txt  modify_08.py  (+46 more)
examples/algorithms/: Cargo.toml  PROJECT_REPORT.md  README.md  check_avl_tree.txt  check_avl_tree_detail.txt  check_b_tree.txt  check_b_tree_detail.txt  check_both.txt  check_closest_pair.txt  check_graph_mst.txt  check_interval_tree_detail.txt  check_out.txt  check_splay_tree.txt  check_splay_tree_detail.txt  check_trie.txt  check_trie_detail.txt  dp.go  ml_algorithms.py  quantum_simulation.py  sort_advanced.go  test_output.txt  test_splay_tree.txt  tests_list.txt
examples/algorithms-cpp/: CMakeLists.txt  README.md  ac_automaton.cpp  advanced.cpp  dynamic.cpp  fenwick_tree.cpp  geometry.cpp  graph.cpp  number_theory.cpp  search.cpp  segment_tree.cpp  sorting.cpp  string.cpp  tree.cpp  union_find.cpp
examples/algorithms-python/: pyproject.toml  sorting.py
examples/algorithms-python/leetcode/: lc0046_permutations.py  lc0051_n_queens.py  lc0127_word_ladder.py  lc0207_course_schedule.py  lc0338_counting_bits.py  lc0994_rotting_oranges.py
examples/algorithms-python/src/: __init__.py
examples/algorithms-python/src/data_structures/: __init__.py  deque.py  dynamic_array.py  hash_table.py  linked_list.py  queue.py  stack.py
examples/algorithms-python/src/divide_and_conquer/: coin_change.py  knapsack.py  (+2 more)
examples/algorithms-python/tests/: test_bellman_ford.py  test_bfs.py  test_binary_search.py  test_bucket_sort.py  test_chinese_remainder.py  test_coin_change.py  test_counting_sort.py  test_deque.py  test_dfs.py  test_dynamic_array.py  test_extended_euclidean.py  test_floyd_warshall.py  test_hash_table.py  test_hopcroft_karp.py  test_insertion_sort.py  test_johnson.py  test_knapsack.py  test_linked_list.py  test_lis.py  test_max_subarray.py  test_queue.py  test_quick_select.py  test_radix_sort.py  test_stack.py
examples/algorithms/benches/: graph_benchmark.rs  sorting_benchmark.rs  sorting_benchmarks.rs
examples/algorithms/src/: ac_automaton.rs  ant_colony.rs  articulation_points.rs  avl_tree.rs  b_tree.rs  backtracking.rs  binary_search.rs  binary_search_tree.rs  bipartite_matching.rs  bloom_filter.rs  bubble_sort.rs  cartesian_tree.rs  chinese_remainder.rs  closest_pair.rs  counting_sort.rs  dancing_links.rs  dijkstra.rs  discrete_log.rs  divide_and_conquer.rs  dsu_on_tree.rs  dynamic_array.rs  dynamic_programming.rs  euler_tour.rs  extended_euclidean.rs  fenwick_tree.rs  fft.rs  fibonacci_heap.rs  floyd_warshall.rs  geometry_utils.rs  graph.rs  graph_bfs_dfs.rs  graph_mst.rs  greedy_activity_selection.rs  hash_table.rs  heap_sort.rs  heavy_light_decomposition.rs  huffman.rs  insertion_sort.rs  interval_tree.rs  johnson.rs  (+42 more)
(+2160 files in other folders)
