[package]
name = "formal-algorithms-examples"
version = "0.1.0"
edition = "2021"
authors = ["Formal Algorithm Project Team"]
description = "Rust implementations of classic algorithms with formal specifications"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "sorting_benchmarks"
harness = false

[[bench]]
name = "search_benchmarks"
harness = false

[lib]
name = "algorithms"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

